--- a/Lesson 3/timer-webpack/src/index.html
+++ b/Lesson 3/timer-webpack/src/index.html
@@ -10,5 +10,6 @@
     <h1>
     <span id="minute">00</span>:<span id="second">00</span>
     </h1>
+    <div id="starter" onclick="start()">Click here to start</div>
 </body>
 </html>
